# sync-vault

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  state.rs  syncer.rs  watcher.rs
